dashboard scrollbar fixes

--- a/src/components/styles/Board.module.sass
+++ b/src/components/styles/Board.module.sass
@@ -11,17 +11,18 @@
 	margin: 0 12px 12px 0
 	&:hover
 		::-webkit-scrollbar-thumb
+			background: transparentize($maincolor-dark, 0.5)
+		::-webkit-scrollbar
+			background-color: $maincolor-light
+		::-webkit-scrollbar-thumb:hover
 			background: transparentize($maincolor-dark, 0.2)
 	::-webkit-scrollbar
-		background-color: $maincolor-light
+		background-color: transparent
 		border-radius: 30px
 		height: 7px
 		width: 7px
-	::-webkit-scrollbar-piece
-		background: #4f1111
-	/* Handle */
 	::-webkit-scrollbar-thumb
-		background: transparentize($maincolor-dark, 0.5)
+		background: transparent
 		border-radius: 20px
 		padding-bottom: 200px
 	&_item
@@ -83,6 +84,7 @@
 				border: 1px solid black
 				position: absolute
 				overflow-y: scroll
+				overflow: auto
 
 		&_polaroid
 			width: fit-content
