--- a/src/pages/styles/Dashboard.module.sass
+++ b/src/pages/styles/Dashboard.module.sass
@@ -14,17 +14,18 @@
 			font-size: 2.4rem
 	&:hover
 		::-webkit-scrollbar-thumb
+			background: transparentize($maincolor-dark, 0.5)
+		::-webkit-scrollbar
+			background-color: $maincolor-light
+		::-webkit-scrollbar-thumb:hover
 			background: transparentize($maincolor-dark, 0.2)
 	::-webkit-scrollbar
-		background-color: $maincolor-light
+		background-color: transparent
 		border-radius: 30px
 		height: 7px
 		width: 7px
-	::-webkit-scrollbar-piece
-		background: #4f1111
-	/* Handle */
 	::-webkit-scrollbar-thumb
-		background: transparentize($maincolor-dark, 0.5)
+		background: transparent
 		border-radius: 20px
 		padding-bottom: 200px
 	&_addContent
