--- a/src/pages/styles/History.module.sass
+++ b/src/pages/styles/History.module.sass
@@ -6,20 +6,22 @@
     border: 1px solid $dark
     margin-bottom: 30px
     display: flex
+    overflow: auto
     &:hover
         ::-webkit-scrollbar-thumb
+            background: transparentize($maincolor-dark, 0.5)
+        ::-webkit-scrollbar
+            background-color: $maincolor-light
+        ::-webkit-scrollbar-thumb:hover
             background: transparentize($maincolor-dark, 0.2)
     ::-webkit-scrollbar
-        background-color: $maincolor-light
+        background-color: transparent
         border-radius: 30px
         height: 7px
         width: 7px
-    ::-webkit-scrollbar-piece
-        background: #4f1111
-
     /* Handle */
     ::-webkit-scrollbar-thumb
-        background: transparentize($maincolor-dark, 0.5)
+        background: transparent
         border-radius: 20px
         padding-bottom: 200px
 
